--- a/css/style.css
+++ b/css/style.css
@@ -136,3 +136,12 @@ section {
   height: 40px;
   background: yellow;
 }
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  z-index: 1;
+}
